--- a/helm/platform/Chart.yaml
+++ b/helm/platform/Chart.yaml
@@ -1,6 +1,15 @@
 apiVersion: v2
 name: platform
-description: Store Provisioning Platform
+description: Store Provisioning Platform Core Services
 type: application
-version: 1.0.0
+version: 0.1.0
 appVersion: "1.0.0"
+dependencies:
+  - name: postgresql
+    version: 12.1.0
+    repository: https://charts.bitnami.com/bitnami
+    condition: postgresql.enabled
+  - name: redis
+    version: 17.3.0
+    repository: https://charts.bitnami.com/bitnami
+    condition: redis.enabled
