--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,42 +1,12 @@
-# Build stage
-FROM node:20-alpine AS builder
+FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
-COPY tsconfig.json ./
-
-# Install dependencies
 RUN npm ci
 
-# Copy source code
-COPY src ./src
+COPY . .
 
-# Build
 RUN npm run build
 
-# Production stage
-FROM node:20-alpine
-
-WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-
-# Install production dependencies only
-RUN npm ci --only=production
-
-# Copy built files
-COPY --from=builder /app/dist ./dist
-COPY prisma ./prisma
-
-# Generate Prisma client
-RUN npx prisma generate
-
-# Run as non-root user
-USER node
-
-EXPOSE 3000
-
-CMD ["node", "dist/server.js"]
+CMD ["npm", "start"]
