--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,34 +1,17 @@
-# Build stage
-FROM node:20-alpine AS builder
+FROM node:18-alpine as builder
 
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
-COPY tsconfig.json ./
-COPY vite.config.ts ./
-COPY tailwind.config.js ./
-COPY postcss.config.js ./
-
-# Install dependencies
 RUN npm ci
 
-# Copy source code
-COPY index.html ./
-COPY src ./src
+COPY . .
 
-# Build
 RUN npm run build
 
-# Production stage
 FROM nginx:alpine
-
-# Copy built files
 COPY --from=builder /app/dist /usr/share/nginx/html
-
-# Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
