--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "orchestrator"
   ],
   "scripts": {
-    "install:all": "npm install && cd dashboard && npm install && cd ../api && npm install && cd ../orchestrator && npm install",
+    "install:all": "npm install && cd dashboard && npm install && cd ../api && npm install && cd ../orchestrator && npm install && cd ../e2e-tests && npm install",
     "build:all": "npm run build --workspaces",
     "dev:dashboard": "npm run dev --workspace=dashboard",
     "dev:api": "npm run dev --workspace=api",
     "dev:orchestrator": "npm run dev --workspace=orchestrator",
     "docker:build": "docker build -t store-platform/dashboard:latest ./dashboard && docker build -t store-platform/api:latest ./api && docker build -t store-platform/orchestrator:latest ./orchestrator",
-    "clean": "rm -rf node_modules dashboard/node_modules api/node_modules orchestrator/node_modules"
+    "test:e2e": "cd e2e-tests && npm test",
+    "test:e2e:woo": "cd e2e-tests && npm run test:woocommerce",
+    "test:e2e:medusa": "cd e2e-tests && npm run test:medusa",
+    "test:e2e:ui": "cd e2e-tests && npm run test:ui",
+    "test:e2e:headed": "cd e2e-tests && npm run test:headed",
+    "clean": "rm -rf node_modules dashboard/node_modules api/node_modules orchestrator/node_modules e2e-tests/node_modules"
   },
   "keywords": [
     "kubernetes",
