--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -13,6 +13,7 @@
         "@kubernetes/client-node": "^0.20.0",
         "@prisma/client": "^5.22.0",
         "@types/uuid": "^11.0.0",
+        "axios": "^1.13.5",
         "bull": "^4.12.0",
         "dotenv": "^16.3.1",
         "ioredis": "^5.3.2",
